--- a/index.html
+++ b/index.html
@@ -7,12 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <body>
 <header class="container text-center">
 <h1>Weather Dashboard</h1>
 </header>
-
 <main class="container-fluid">
 
 <div class="row">
@@ -42,4 +60,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
-</html>
+</html> -->
