--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <div id="searchBoxForm">
             <h2>Get Your Forecast:</h2>
             <form id="searchForm">
-                <input class="formGroup" for="city-name">Search:</input>
+                <!-- <input class="formGroup" for="city-name">Search:</input> -->
                 <input id="city-name" type="text" placeholder ="City Name" class="formInput" />
-                <input type="submit" class="btnPrimary" id="submitBtn"> Submit </input>
+                <input type="submit" class="btnPrimary" id="submitBtn"></input>
               </form> 
         </div>
         <div id="pastSearches">  
