--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
 
     </main>
 
-    <script src="./assets/script.js"></script>
+    <script src="assets/images/_Users_Damaris_Work_CHALLENGES_week6-Challenge_index.html_ (3).png"></script>
 
-</body>
-
+</body scr="./assets/im">
 </html>
 
 
