--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     </main>
 
-    <script src="assets/images/_Users_Damaris_Work_CHALLENGES_week6-Challenge_index.html_ (3).png"></script>
+    <script src="./assets/script.js"></script>
 
-</body scr="./assets/im">
+</body>
 </html>
 
 
